<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_title_label"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/gpsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/data_area_shaded_top"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainTitle">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/gpsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_span="4"
                android:paddingLeft="4dp"
                android:text="@string/gps_title_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="32sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/latitudeLabel"
                style="@style/DataLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude_label" />

            <TextView
                android:id="@+id/latitudeValue"
                style="@style/DataValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:text="@string/empty_data" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/longitudeLabel"
                style="@style/DataLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude_label" />

            <TextView
                android:id="@+id/longitudeValue"
                style="@style/DataValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:text="@string/empty_data" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/altitudeLabel"
                style="@style/DataLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altitude_label" />

            <TextView
                android:id="@+id/altitudeValue"
                style="@style/DataValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_data" />

            <TextView
                android:id="@+id/bearingLabel"
                style="@style/DataLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bearing_label" />

            <TextView
                android:id="@+id/bearingValue"
                style="@style/DataValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_data" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/speedLabel"
                style="@style/DataLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_label" />

            <TextView
                android:id="@+id/speedValue"
                style="@style/DataValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_data" />

            <TextView
                android:id="@+id/accuracyLabel"
                style="@style/DataLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accuracy_label" />

            <TextView
                android:id="@+id/accuracyValue"
                style="@style/DataValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_data" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/accelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/data_area_shaded_top"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gpsLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/accelTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_span="6"
                android:paddingLeft="4dp"
                android:text="@string/accel_title_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="32sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/xLabel"
                style="@style/DataLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x_label" />

            <TextView
                android:id="@+id/xValue"
                style="@style/DataValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_data" />

            <TextView
                android:id="@+id/yLabel"
                style="@style/DataLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y_label" />

            <TextView
                android:id="@+id/yValue"
                style="@style/DataValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_data" />

            <TextView
                android:id="@+id/zLabel"
                style="@style/DataLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/z_label" />

            <TextView
                android:id="@+id/zValue"
                style="@style/DataValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_data" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/startStopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:padding="16dp"
        android:text="@string/button_label_start"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accelLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>